# apis-instance-discworld-test

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: deploy.yml
apis_instance_discworld_test/: asgi.py  settings.py  urls.py  wsgi.py
startup/: 100-gunicorn
