[tool.poetry]
name = "apis-instance-discworld-test"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{include = "apis_instance_discworld_test"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
